# mega-audio-converter

./: .gitignore  Cargo.toml  DEV_NOTES.md  README.md  dist-workspace.toml
.github/workflows/: release.yml
src/: main.rs  v2.rs
wix/: main.wxs
